# localtasks

./: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  queue.go  settings.go  task.go
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker-image.yml
localtasks/: queue.py  settings.py  task.py  worker.py
localtasks/api/: __init__.py  dependencies.py  lifespan.py  middlewares.py  routes.py  schemas.py
tests/: test_api.py  test_queue.py  test_task.py
worker/: main.go
